Now the screen displays fruits and the entire body of the snake; Snake body elements now follow the snake's head.

--- a/Snake/Snake.vcxproj
+++ b/Snake/Snake.vcxproj
@@ -127,12 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Fruit.cpp" />
     <ClCompile Include="Snake.cpp" />
     <ClCompile Include="SnakeBody.cpp" />
     <ClCompile Include="SnakeHead.cpp" />
     <ClCompile Include="Vector2.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Fruit.h" />
     <ClInclude Include="SnakeBody.h" />
     <ClInclude Include="SnakeHead.h" />
     <ClInclude Include="Vector2.h" />
