--- a/Snake/Snake.vcxproj
+++ b/Snake/Snake.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{8956f55c-3cab-4ef0-9b38-328eaf116a67}</ProjectGuid>
     <RootNamespace>Snake</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Snake Game</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,7 +129,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Fruit.cpp" />
-    <ClCompile Include="Snake.cpp" />
+    <ClCompile Include="SnakeGame.cpp" />
     <ClCompile Include="SnakeBody.cpp" />
     <ClCompile Include="SnakeHead.cpp" />
     <ClCompile Include="Vector2.cpp" />
