--- a/Snake/Snake.vcxproj
+++ b/Snake/Snake.vcxproj
@@ -129,6 +129,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Fruit.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="SnakeGame.cpp" />
     <ClCompile Include="SnakeBody.cpp" />
     <ClCompile Include="SnakeHead.cpp" />
@@ -136,6 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Fruit.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="SnakeBody.h" />
     <ClInclude Include="SnakeHead.h" />
     <ClInclude Include="Vector2.h" />
